우병걸/0531//게시글수정완료